图片不显示处理

--- a/Java/04_面向对象基础.md
+++ b/Java/04_面向对象基础.md
@@ -24,13 +24,9 @@
 
 所以，只要理解了class和instance的概念，基本上就明白了什么是面向对象编程。
 
-class是一种对象模版，它定义了如何创建实例，因此，class本身就是一种数据类型：
+class是一种对象模版，它定义了如何创建实例，因此，class本身就是一种数据类型。
 
-![class](https://www.liaoxuefeng.com/files/attachments/1260571618658976/l)
-
-而instance是对象实例，instance是根据class创建的实例，可以创建多个instance，每个instance类型相同，但各自属性可能不相同：
-
-![instances](https://www.liaoxuefeng.com/files/attachments/1260571718581056/l)
+而instance是对象实例，instance是根据class创建的实例，可以创建多个instance，每个instance类型相同，但各自属性可能不相同。
 
 ## 定义class
 
@@ -153,8 +149,6 @@ class Person {
 ```
 
 是不是编译报错？把访问`field`的赋值语句去了就可以正常编译了。
-
-![buduijin](https://www.liaoxuefeng.com/files/attachments/1099851451809856/l)
 
 把`field`从`public`改成`private`，外部代码不能访问这些`field`，那我们定义这些`field`有什么用？怎么才能给它赋值？怎么才能读取它的值？
 
@@ -2751,15 +2745,9 @@ package_sample
          └─ Arrays.class
 ```
 
-这里需要特别注意的是，jar包里的第一层目录，不能是`bin`，而应该是`hong`、`ming`、`mr`。如果在Windows的资源管理器中看，应该长这样：
+这里需要特别注意的是，jar包里的第一层目录，不能是`bin`，而应该是`hong`、`ming`、`mr`。
 
-![hello.zip.ok](https://www.liaoxuefeng.com/files/attachments/1261393208671488/l)
-
-如果长这样：
-
-![hello.zip.invalid](https://www.liaoxuefeng.com/files/attachments/1261391527906784/l)
-
-说明打包打得有问题，JVM仍然无法从jar包中查找正确的`class`，原因是`hong.Person`必须按`hong/Person.class`存放，而不是`bin/hong/Person.class`。
+JVM仍然无法从jar包中查找正确的`class`，原因是`hong.Person`必须按`hong/Person.class`存放，而不是`bin/hong/Person.class`。
 
 jar包还可以包含一个特殊的`/META-INF/MANIFEST.MF`文件，`MANIFEST.MF`是纯文本，可以指定`Main-Class`和其它信息。JVM会自动读取这个`MANIFEST.MF`文件，如果存在`Main-Class`，我们就不必在命令行指定启动的类名，而是用更方便的命令：
 
